[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="VindSlider" type="HSlider" parent="."]
margin_left = 8.0
margin_right = 200.0
margin_bottom = 64.0
max_value = 5.0
step = 0.2

[node name="RegnKnap" type="Button" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 184.0
margin_bottom = 96.0
text = "Regn"

[node name="SneKnap" type="Button" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 144.0
text = "Sne"

[node name="Label" type="Label" parent="."]
margin_left = 208.0
margin_top = 24.0
margin_right = 248.0
margin_bottom = 38.0
text = "Vind"

[connection signal="value_changed" from="VindSlider" to="." method="_on_VindSlider_value_changed"]
[connection signal="pressed" from="RegnKnap" to="." method="_on_RegnKnap_pressed"]
[connection signal="pressed" from="SneKnap" to="." method="_on_SneKnap_pressed"]
